--- a/_layouts/schedule.html
+++ b/_layouts/schedule.html
@@ -135,7 +135,7 @@ layout: default
 			<P><FONT COLOR="#000000">3:15 to 4:15 PM</FONT></P>
 		</TD>
 		<TD WIDTH=33% STYLE="border: 1.00pt solid #00000a; padding: 0in 0.08in">
-			<P><FONT COLOR="#000000">Machine</FONT></P>
+			<P><FONT COLOR="#000000">Anaesthesia Machine</FONT></P>
 		</TD>
 		<TD WIDTH=33% STYLE="border: 1.00pt solid #00000a; padding: 0in 0.08in">
 			<P><FONT COLOR="#000000">Dr. U C Verma</FONT></P>
@@ -882,8 +882,8 @@ layout: default
 			<P STYLE="margin-bottom: 0in"><FONT COLOR="#000000">Dr. Jayashree
 			Sood, </FONT>
 			</P>
-			<P STYLE="margin-bottom: 0in"><FONT COLOR="#000000">Dr. Veena
-			Asthana</FONT></P>
+			<P STYLE="margin-bottom: 0in"><FONT COLOR="#000000">Dr. Kavita
+			Sharma</FONT></P>
 			<P STYLE="margin-bottom: 0in"><FONT COLOR="#000000"><B>Moderator:</B></FONT><FONT COLOR="#000000">
 			</FONT>
 			</P>
