Update broken image link

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="icon" href="https://upload.wikimedia.org/wikipedia/en/8/83/LogoOfMAMC.jpg">
+    <link rel="icon" href="https://upload.wikimedia.org/wikipedia/en/thumb/4/43/Maulana_Azad_Medical_College_logo.svg/450px-Maulana_Azad_Medical_College_logo.svg.png">
     <title>{% if page.title %}{{ page.title }} – {% endif %}{{ site.name }} – {{ site.description }}</title>
 
     {% include meta.html %}
