Initial commit for 2022

--- a/_layouts/hotels.html
+++ b/_layouts/hotels.html
@@ -2,6 +2,8 @@
 layout: default
 ---
 
+<i>Coming Soon</i>
+<!-- 
 <center>
 <TABLE WIDTH=601 CELLPADDING=7 CELLSPACING=0>
 	<COL WIDTH=135>
@@ -344,4 +346,4 @@ layout: default
 		</TD>
 	</TR>
 </TABLE>
-</center>
+</center> -->
