--- a/_layouts/schedule.html
+++ b/_layouts/schedule.html
@@ -1,7 +1,9 @@
 ---
 layout: default
 ---
-<BODY LANG="en-IN" DIR="LTR">
+
+<i>Coming soon</i>
+<!-- <BODY LANG="en-IN" DIR="LTR">
 <P ALIGN=CENTER STYLE="margin-bottom: 0.11in"><B>Day 1: 28th Aug (Wednesday)</B><TABLE DIR="LTR" ALIGN=LEFT WIDTH=99% HSPACE=4 CELLPADDING=7 CELLSPACING=0>
 	<COL WIDTH=85*>
 	<COL WIDTH=85*>
@@ -926,4 +928,4 @@ layout: default
 <P ALIGN=CENTER STYLE="margin-bottom: 0.11in"><BR><BR>
 </P>
 </BODY>
-</HTML>
+</HTML> -->
