--- a/_layouts/venuehtml.html
+++ b/_layouts/venuehtml.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<article class="page">
+<!-- <article class="page">
 
   <h1>{{ page.title }}</h1>
   <div id="slideshow">
@@ -12,4 +12,4 @@ layout: default
   <div class="entry">
     {{ content }}
   </div>
-</article>
+</article> -->
