--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -7,54 +7,27 @@ layout: default
 
 <div id="slideshow">
     	<div>
-    		<img src="{{site.baseurl}}/images/main1.jpeg"style="width:400px;height:300px;">
+    		<img src="{{site.baseurl}}/images/main01.jpeg"style="width:400px;height:300px;">
     	</div>
-		<div>
-    		<img src="{{site.baseurl}}/images/main11.jpg"style="width:400px;height:300px;">
-		</div>
-		<div>
-    		<img src="{{site.baseurl}}/images/main12.jpg"style="width:400px;height:300px;">
-		</div>
-		<div>
-    		<img src="{{site.baseurl}}/images/main13.jpg"style="width:400px;height:300px;">
-		</div>
-		<div>
-    		<img src="{{site.baseurl}}/images/main14.jpg"style="width:400px;height:300px;">
-		</div>
-		<div>
-    		<img src="{{site.baseurl}}/images/main15.jpg"style="width:400px;height:300px;">
-		</div>
-		<div>
-    		<img src="{{site.baseurl}}/images/main16.jpg"style="width:400px;height:300px;">
-		</div>
-		<div>
-    		<img src="{{site.baseurl}}/images/main17.jpg"style="width:400px;height:300px;">
-		</div>
-		<div>
-    		<img src="{{site.baseurl}}/images/main9.jpg"style="width:400px;height:300px;">
+			<div>
+    		<img src="{{site.baseurl}}/images/main02.jpeg"style="width:400px;height:300px;">
     	</div>
-		<div>
-    		<img src="{{site.baseurl}}/images/main18.jpg"style="width:400px;height:300px;">
-		</div>
-		<div>
-    		<img src="{{site.baseurl}}/images/main20.jpg"style="width:400px;height:300px;">
-		</div>
-		<div>
-    		<img src="{{site.baseurl}}/images/main21.jpg"style="width:400px;height:300px;">
-		</div>
-		<div>
-    		<img src="{{site.baseurl}}/images/main22.jpg"style="width:400px;height:300px;">
-		</div>
-		<div>
-    		<img src="{{site.baseurl}}/images/main23.jpg"style="width:400px;height:300px;">
-		</div>
-		<div>
-    		<img src="{{site.baseurl}}/images/main24.jpg"style="width:400px;height:300px;">
-		</div>
-		<div>
-    		<img src="{{site.baseurl}}/images/main25.jpg"style="width:400px;height:300px;">
+			<div>
+    		<img src="{{site.baseurl}}/images/main03.jpeg"style="width:400px;height:300px;">
+    	</div>
+			<div>
+    		<img src="{{site.baseurl}}/images/main04.jpeg"style="width:400px;height:300px;">
+    	</div>
+			<div>
+    		<img src="{{site.baseurl}}/images/main05.jpeg"style="width:400px;height:300px;">
+    	</div>
+			<div>
+    		<img src="{{site.baseurl}}/images/main06.jpeg"style="width:400px;height:300px;">
+    	</div><div>
+    		<img src="{{site.baseurl}}/images/main07.jpeg"style="width:400px;height:300px;">
     	</div>
 </div>
+
 <script src="//static.codepen.io/assets/common/stopExecutionOnTimeout-b2a7b3fe212eaa732349046d8416e00a9dec26eb7fd347590fbced3ab38af52e.js"></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
 <script src="{{ site.baseurl }}/javascript.js"></script>
